<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app = "http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always">


    </item>
    <item
        android:id="@+id/qr_scanner"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory="2"
        android:title="@string/qrscanner"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/exit"
        android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="100"
        android:title="@string/exitApp"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/enableNFC"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="60"
        android:title="@string/enableNFC"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/database"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="50"
        android:title="@string/database"
        app:showAsAction="ifRoom">

        <menu>
        <item
            android:id="@+id/getDatabase"
            android:orderInCategory="10"
            android:title="@string/getDatabase"
            app:showAsAction="never">

        </item>
        <item
            android:id="@+id/searchInDatabase"
            android:checkable="true"
            android:orderInCategory="1"
            android:title="@string/searchInDatabase"
            app:showAsAction="never">

        </item>
    </menu>
</item>

</menu>