<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:background="@drawable/header_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtrow"
                android:layout_width="@dimen/first_cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center"
                android:text="#"
                android:textAllCaps="false"

                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtInv_st"
                android:layout_width="@dimen/id_cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center"
                android:text="@string/ID"
                android:textAllCaps="false"

                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtOpis"
                android:layout_width="@dimen/desc_cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:text="@string/description"

                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center"
                android:text="@string/status_header"
                android:textAllCaps="false"

                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtdays"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center"
                android:text="@string/days"
                android:textAllCaps="false"

                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

            <!-- <TextView
                android:id="@+id/txtStarPlayerName"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/star"
                android:textAllCaps="true"

                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtLogo"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/logo"
                android:textAllCaps="true"

                android:textStyle="bold" />
                -->
        </LinearLayout>


    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="@dimen/RV_top_offset"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/colorRow">

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/id_number"
                android:textColor="@color/row_lbl_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="15dp"
                app:autoSizeMinTextSize="10dp" />

            <TextView
                android:id="@+id/tagIDTextview"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="2dp"
                android:textAlignment="viewStart"
                android:textColor="@color/row_text"
                android:textSize="14sp"
                app:autoSizeMaxTextSize="16dp"
                app:autoSizeMinTextSize="10dp"
                app:autoSizeTextType="uniform" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/company_location"
                android:textColor="@color/row_lbl_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="15dp"
                app:autoSizeMinTextSize="10dp" />

            <TextView
                android:id="@+id/tipTextview"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="2dp"
                android:textAlignment="viewStart"
                android:textColor="@color/row_text"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/colorRow">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/description"
                android:textColor="@color/row_lbl_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="15dp"
                app:autoSizeMinTextSize="10dp" />

            <TextView
                android:id="@+id/opisTextView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="2dp"
                android:textAlignment="viewStart"
                android:textColor="@color/row_text"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/status"
                android:textColor="@color/row_lbl_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="15dp"
                app:autoSizeMinTextSize="10dp" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="2dp"
                android:textAlignment="viewStart"
                android:textColor="@color/row_text"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/colorRow">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/assignedTo"
                android:textColor="@color/row_lbl_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="15dp"
                app:autoSizeMinTextSize="10dp" />

            <TextView
                android:id="@+id/assignedToTextView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="2dp"
                android:textAlignment="viewStart"
                android:textColor="@color/row_text"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/geolocation"
                android:textColor="@color/row_lbl_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="15dp"
                app:autoSizeMinTextSize="10dp" />

            <TextView
                android:id="@+id/Geolokacija"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="2dp"
                android:textAlignment="viewStart"
                android:textColor="@color/row_text"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border"
        android:contentDescription="@string/imageView_content_description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/tableLayout">

    </ImageView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/prevzButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="false"
            android:focusable="auto"
            android:minHeight="30dp"
            android:text="@string/prevButtontext"
            android:textColor="#124714"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pokvButtonfalse"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="30dp"
            android:text="@string/stateBrokenTxt"
            android:textColor="#124714"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pokvButtonTrue"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="30dp"
            android:text="@string/stateWorking"
            android:textColor="#124714"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>