<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stran2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/tv_selected_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/default_row_color">


            <TableRow
                android:id="@+id/r1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="42dp"
                android:rotationX="0">

                <TextView
                    android:id="@+id/Oznaka_opis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textCapCharacters"
                    android:text="@string/opis_opreme"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtOpis2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:textColor="@color/teal_700"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:id="@+id/r2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="42dp">

                <TextView
                    android:id="@+id/Oznaka_inv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textCapCharacters"
                    android:text="@string/id_number"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtInv_st2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:textColor="@color/teal_700"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/r3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="42dp">

                <TextView
                    android:id="@+id/Oznaka_uporabnik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textCapCharacters"
                    android:text="@string/Oznaka_zadolžen"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtUser2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:textColor="@color/teal_700"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:id="@+id/r4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="42dp">

                <TextView
                    android:id="@+id/Oznaka_Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textCapCharacters"
                    android:text="@string/status"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtStatus2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:textColor="@color/teal_700"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:id="@+id/r5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="42dp">

                <TextView
                    android:id="@+id/Oznaka_nahajalisce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textCapCharacters"
                    android:text="@string/nahajalisce"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNahajalisce2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:textColor="@color/teal_700"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:id="@+id/r6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:minHeight="42dp"
                android:rotationX="0">

                <TextView
                    android:id="@+id/Oznaka_Lokacija"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textCapCharacters"
                    android:text="@string/geolocation"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtLokacija2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    android:textColor="@color/teal_700"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:id="@+id/r7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="42dp">


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="0dp"
                    android:layout_height="270dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/slika2"
                    android:layout_width="0dp"
                    android:layout_height="270dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/r8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:minHeight="42dp">


            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>